# gradient_agreement_filtering

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml  workflow.yml
examples/: 1_cifar_100_train_loop_exposed.py  2_cifar_100_trainer.py  3_cifar_100N_Fine_train_loop_exposed.py
src/: gaf.py
src/gradient_agreement_filtering/: __init__.py  gaf.py
test/: run_sweeps.sh  test_gaf.py
