[project]
name = "gaf"
version = "0.1.0"
description = "Gradient Agreement Filtering (GAF) Package"
authors = [
  { name="Francois Chaubard", email="fchaubard@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "torch==2.0.0",
  "torchvision==0.15.2",
  "numpy==1.23.0"
]

[tool.setuptools.packages.find]
where = ["src"]
