[project]
name = "gaf"
version = "0.1.0"
description = "Gradient Agreement Filtering (GAF) Package"
authors = [
  { name="Francois Chaubard", email="fchaubard@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "torch",
  "torchvision",
  "numpy"
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["gaf"]
