[project]
name = "gradient_agreement_filtering"
version = "0.1.3"
description = "Gradient Agreement Filtering (GAF) Package"
authors = [
  { name="Francois Chaubard", email="fchaubard@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.5.0",
  "torchvision>=0.20.1",
  "numpy>=2.2.0",
]

# Add dev dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "wandb>=0.19.0",
]

all = [
    "wandb>=0.19.0",
]

[tool.setuptools]
py-modules = ['gradient_agreement_filtering']

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]

[project.urls]
Homepage = "https://github.com/Fchaubard/gradient_agreement_filtering"
